--- a/api_rest/package.json
+++ b/api_rest/package.json
@@ -22,7 +22,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.2.0",
+    "multer": "^1.4.2",
     "sequelize": "^5.21.5"
   }
 }
